--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
@@ -18,8 +18,8 @@
 
     <TextView
         android:id="@+id/textViewMsgPayload"
-        android:layout_width="406dp"
-        android:layout_height="113dp"
+        android:layout_width="match_parent"
+        android:layout_height="105dp"
         android:layout_marginTop="24dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
