--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_map.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_map.xml
@@ -75,7 +75,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.navigation.NavigationView>
+
+    </androidx.drawerlayout.widget.DrawerLayout>
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nvView"
         android:layout_width="wrap_content"
